# rsearch-engine

./: Cargo.toml  LICENSE  README.md  search.txt
src/: bm25.rs  main.rs
